# Img_to_Wallpaper

./: pyproject.toml
img_to_wallpaper/: hexagonal_wallpaper.py  wallpaper_generator.py
