[tool.poetry]
name = "img-to-wallpaper"
version = "0.1.0"
description = ""
authors = ["EtiNL <etienne.lanzeray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pylint = "^3.3.1"
coverage = "^7.6.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
